--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ h1 {
 
 .r2c2::after {
     content: " ";
-    background-color: navy;
+    background-color: #016c8d;
     width: 150px;
     height: 2px;
     display: block;
@@ -87,4 +87,10 @@ h1 {
 
 .alter:hover {
     background-color: lightcoral;
+}
+
+.paragraph {
+    color: red;
+    border-bottom: 2px solid #016c8d;
+    margin: 10px 120px 10px 120px;
 }
