--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,13 @@ body {
 .container-padding {
     margin: 12px;
     border: 1px dashed #016c8d;
+    background-color: aliceblue;
 }
 
 p, h1 {
     text-align: center;
     font-size: 110%;
-    font-family: "Bellefair";
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -86,11 +87,20 @@ h1 {
 }
 
 .alter:hover {
-    background-color: lightcoral;
+    background-color: rgb(223, 0, 0);
+    color: white;
 }
 
 .paragraph {
     color: red;
     border-bottom: 2px solid #016c8d;
-    margin: 10px 120px 10px 120px;
+    margin: 10px 150px 10px 150px;
+}
+
+.hover {
+    margin-top: 10px;
+}
+
+.bulldog.hover {
+    display: block;
 }
